--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -237,7 +237,7 @@ header {
 }
 
 .banner-text h1 {
-  line-height: 33px;
+  // line-height: 33px;
   font-size: 39.81px;
   margin-bottom: 2rem;
 }
