--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -401,5 +401,13 @@
 
   #banner {
     margin-left: 1rem;
+
+    .banner-content {
+      .banner-text {
+        h1 {
+          line-height: 30px;
+        }
+      }
+    }
   }
 }
