--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -290,6 +290,11 @@
         p {
           font-size: 16px;
         }
+
+        .btn-dark {
+          font-size: 100%;
+          padding: 14px;
+        }
       }
     }
   }
