--- a/styles/_step-1.scss
+++ b/styles/_step-1.scss
@@ -11,7 +11,7 @@
   /* border-right: 2px solid #000; */
   box-shadow: 0px 0px 7px rgba(32, 32, 48, 0.1);
   width: 310px;
-  height: 677px;
+  height: 100%;
   display: block;
   z-index: 1;
   transition: all 0.2s ease-in-out;
@@ -22,7 +22,7 @@
   display: flex;
   align-items: center;
   /* margin: auto; */
-  width: 310px;
+  width: 100%;
   height: 70px;
   padding: 1rem 3rem;
   position: absolute;
@@ -77,12 +77,26 @@
 //   opacity: 0.6;
 // }
 
-#step-1 {
+.step-1-wrap {
   position: absolute;
-  top: 120px;
-  left: 490px;
-  margin: auto;
-  width: 68%;
+  top: 80px;
+  left: 0px;
+  // background: red;
+  width: 100%;
+  height: 550px;
+  // overflow: scroll;
+}
+
+#step-1 {
+  position: relative;
+  height: 100%;
+  overflow-y: scroll;
+
+  // top: 120px;
+  // left: 490px;
+  // margin: auto;
+  margin: 4rem 0rem 0rem 28rem;
+  width: 80%;
 }
 
 #step-1 .step-1-header-text h1 {
@@ -98,7 +112,7 @@
   line-height: 18px;
   color: #202030;
   opacity: 0.6;
-  width: 70%;
+  width: 60%;
   margin-bottom: 2.5rem;
 }
 
@@ -107,6 +121,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
   max-width: 70%;
+  transition: all 0.3s ease-in-out;
 }
 
 .step-1-input-content form label,
@@ -123,7 +138,7 @@
   background: rgba(32, 32, 48, 0.2);
   border: 1px solid transparent;
   border-radius: 3px;
-  width: 295px;
+  width: 100%;
   height: 40px;
   padding: 1rem;
   margin-top: 1rem;
@@ -134,7 +149,7 @@
 .step-1-input-content select,
 .step-2-input-content select {
   padding: 0rem 1rem;
-  width: 295px;
+  width: 100%;
   height: 40px;
 }
 
@@ -147,16 +162,19 @@
 
 #step-1 .form-link,
 #step-2 .form-link {
+  // display: flex;
+  // justify-content: flex-end;
+  align-items: center;
   /* position: relative; */
-  max-width: 145px;
-  height: 59px;
-  margin-left: 33rem;
-  margin-top: 2rem;
+  // max-width: 145px;
+  // height: 59px;
+  // margin-left: 33rem;
+  margin: 2rem 0;
 }
 
-#step-1 a,
-#step-2 a {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
+// #step-1 a,
+// #step-2 a {
+//   // display: flex;
+//   // justify-content: center;
+//   // width: 10%;
+// }
