--- a/styles/_step-2.scss
+++ b/styles/_step-2.scss
@@ -11,23 +11,35 @@ body {
 
 .step-2-wrap {
   position: absolute;
-  top: 120px;
-  left: 450px;
+  top: 80px;
+  left: 0px;
   // background: red;
   width: 100%;
   height: 550px;
   // overflow: scroll;
 }
 
+// #step-2 {
+//   position: relative;
+
+//   // margin: auto;
+//   height: 100%;
+//   // z-index: -1;
+//   overflow-y: scroll;
+//   scrollbar-width: 100px;
+//   scroll-behavior: smooth;
+// }
+
 #step-2 {
   position: relative;
-
-  // margin: auto;
   height: 100%;
-  // z-index: -1;
   overflow-y: scroll;
-  scrollbar-width: 100px;
-  scroll-behavior: smooth;
+
+  // top: 120px;
+  // left: 490px;
+  // margin: auto;
+  margin: 4rem 0rem 0rem 28rem;
+  width: 80%;
 }
 
 #step-2 .step-2-header-text h1 {
@@ -64,7 +76,7 @@ body {
   line-height: 18px;
   color: #202030;
   opacity: 0.6;
-  width: 70%;
+  width: 100%;
   margin-top: 0.5rem;
 }
 
