banner_text_Mod

--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -118,6 +118,9 @@
 }
 
 @media screen and (max-width: 1000px) {
+  body {
+    width: 100vw;
+  }
   #discover {
     .discover-content {
       .discover-text {
